--- a/.drone.yml
+++ b/.drone.yml
@@ -2,4 +2,5 @@ image: bradrydzewski/python:2.7
 script:
     - sudo apt-get install -y python-pip
     - sudo apt-get remove -y python-simplejson
+    - pip install -r requirements.txt
     - ./drone_test.sh
